# agentic-rag

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: PRODUCT.md
src/: path_config.py
src/chatbot/: chatbot.py
src/pipeline/: chunk.py  embedding.py  ingest.py  logger.py  main.py
src/scraper/: scraper.py
